RSAT domain join to PowerShell domain join

--- a/config/Win10Domain.xml.templ
+++ b/config/Win10Domain.xml.templ
@@ -3,19 +3,11 @@
     <settings pass="windowsPE">
 	<component name="Microsoft-Windows-Setup" processorArchitecture="x86" publicKeyToken="31bf3856ad364e35" language="neutral" versionScope="nonSxS" xmlns:wcm="http://schemas.microsoft.com/WMIConfig/2002/State" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
             <UserData>
-                <ProductKey>
-                    <WillShowUI>OnError</WillShowUI>
-                    <Key>PRODUCTID</Key>
-                </ProductKey>
                 <AcceptEula>true</AcceptEula>
             </UserData>
         </component>
         <component name="Microsoft-Windows-Setup" processorArchitecture="amd64" publicKeyToken="31bf3856ad364e35" language="neutral" versionScope="nonSxS" xmlns:wcm="http://schemas.microsoft.com/WMIConfig/2002/State" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
             <UserData>
-                <ProductKey>
-                    <WillShowUI>OnError</WillShowUI>
-                    <Key>PRODUCTID</Key>
-                </ProductKey>
                 <AcceptEula>true</AcceptEula>
             </UserData>
         </component>
@@ -61,11 +53,9 @@
         </component>
 	<component name="Microsoft-Windows-Shell-Setup" processorArchitecture="x86" publicKeyToken="31bf3856ad364e35" language="neutral" versionScope="nonSxS" xmlns:wcm="http://schemas.microsoft.com/WMIConfig/2002/State" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
             <ComputerName>HOSTNAME</ComputerName>
-            <ProductKey>PRODUCTID</ProductKey>
         </component>
         <component name="Microsoft-Windows-Shell-Setup" processorArchitecture="amd64" publicKeyToken="31bf3856ad364e35" language="neutral" versionScope="nonSxS" xmlns:wcm="http://schemas.microsoft.com/WMIConfig/2002/State" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
             <ComputerName>HOSTNAME</ComputerName>
-	    <ProductKey>PRODUCTID</ProductKey>
         </component>
 	<component name="Microsoft-Windows-TerminalServices-LocalSessionManager" processorArchitecture="x86" publicKeyToken="31bf3856ad364e35" language="neutral" versionScope="nonSxS" xmlns:wcm="http://schemas.microsoft.com/WMIConfig/2002/State" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
             <fDenyTSConnections>false</fDenyTSConnections>
@@ -116,7 +106,7 @@
 		<SkipUserOOBE>true</SkipUserOOBE>
                 <SkipMachineOOBE>true</SkipMachineOOBE>
             </OOBE>
-	    <TimeZone>Pacific Standard Time</TimeZone>
+	    <TimeZone>W. Europe Standard Time</TimeZone>
 	    <UserAccounts>
                 <AdministratorPassword>
                     <Value>ntAdministratorPassword</Value>
@@ -125,7 +115,7 @@
             </UserAccounts>
         </component>
 	<component name="Microsoft-Windows-International-Core" processorArchitecture="x86" publicKeyToken="31bf3856ad364e35" language="neutral" versionScope="nonSxS" xmlns:wcm="http://schemas.microsoft.com/WMIConfig/2002/State" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-            <InputLocale>>de-DE</InputLocale>
+            <InputLocale>de-DE</InputLocale>
             <UserLocale>de-DE</UserLocale>
             <SystemLocale>de-DE</SystemLocale>
             <UILanguage>de-DE</UILanguage>
