--- a/config/Win8Domain.xml.templ
+++ b/config/Win8Domain.xml.templ
@@ -34,21 +34,21 @@
 	<component name="Microsoft-Windows-UnattendedJoin" processorArchitecture="x86" publicKeyToken="31bf3856ad364e35" language="neutral" versionScope="nonSxS" xmlns:wcm="http://schemas.microsoft.com/WMIConfig/2002/State" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
             <Identification>
                 <Credentials>
-                    <Domain>WORKGROUP</Domain>
+                    <Domain>DOMAIN</Domain>
                     <Password>register</Password>
-                    <Username>WORKGROUP\register</Username>
+                    <Username>DOMAIN\register</Username>
                 </Credentials>
-                <JoinDomain>WORKGROUP</JoinDomain>
+                <JoinDomain>DOMAIN</JoinDomain>
             </Identification>
         </component>
         <component name="Microsoft-Windows-UnattendedJoin" processorArchitecture="amd64" publicKeyToken="31bf3856ad364e35" language="neutral" versionScope="nonSxS" xmlns:wcm="http://schemas.microsoft.com/WMIConfig/2002/State" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
             <Identification>
                 <Credentials>
-                    <Domain>WORKGROUP</Domain>
+                    <Domain>DOMAIN</Domain>
                     <Password>register</Password>
-                    <Username>WORKGROUP\register</Username>
+                    <Username>DOMAIN\register</Username>
                 </Credentials>
-                <JoinDomain>WORKGROUP</JoinDomain>
+                <JoinDomain>DOMAIN</JoinDomain>
             </Identification>
         </component>
 	<component name="Microsoft-Windows-Shell-Setup" processorArchitecture="x86" publicKeyToken="31bf3856ad364e35" language="neutral" versionScope="nonSxS" xmlns:wcm="http://schemas.microsoft.com/WMIConfig/2002/State" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
